css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import 'antd/dist/antd.css';
@import './monokai-sublime.css';
@import './Search.css';

.remark-code-title {
  @apply px-5 py-3 font-mono text-sm font-bold text-gray-200 bg-gray-700 rounded-t;
}

.remark-code-title + pre {
  @apply mt-0 rounded-t-none;
}

.task-list-item:before {
  @apply hidden;
}

html {
  scroll-behavior: smooth;
}

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    /* font-family: 'Noto Sans SC', 'Lexand', sans-serif; */
    @apply mb-1 flex items-center;
  }
  [type='text'],
  [type='email'],
  [type='url'],
  [type='password'],
  [type='number'],
  [type='date'],
  [type='datetime-local'],
  [type='month'],
  [type='search'],
  [type='tel'],
  [type='time'],
  [type='week'],
  [multiple],
  textarea,
  select {
    @apply bg-transparent;
  }
}
.custom-link:hover::after {
  content: '';
  height: 3px;
  width: 18px;
  position: absolute;
  right: 50%;
  bottom: 0;
  margin-right: -9px;
  @apply bg-blue-500 dark:hover:text-blue-400;
}

.active-link::after {
  content: '';
  height: 3px;
  width: 18px;
  position: absolute;
  right: 50%;
  bottom: 0;
  margin-right: -9px;
  @apply bg-blue-500;
}

@layer utilities {
  .dd-inline {
    @apply ml-2 inline text-xs font-medium text-gray-500 dark:text-gray-400 whitespace-nowrap;
  }
  .dt-inline {
    @apply inline-block text-xs whitespace-nowrap;
  }
  .v-rule {
    @apply mx-2 border-l border-gray-200 dark:border-gray-600;
  }
  .bg-img {
    @apply fixed h-screen w-screen overflow-hidden z-0;
  }
  .flex-center {
    @apply flex justify-center items-center;
  }
  .card-shadow {
    @apply shadow-md transition-all duration-150 ease-in-out hover:shadow-xl focus:shadow-xl;
  }
  .acrylic {
    @apply bg-opacity-80 dark:bg-opacity-50;
    backdrop-filter: saturate(180%) blur(5px);
  }
}

/* Meta-search custom css */
.meta-search-bar {
  width: 584px;
  max-width: 80vw;
  margin-bottom: 40px;
  border-radius: 20px;
}
.meta-search-bar * {
  background: none;
  color: white;
  border: none;
  border-radius: 0.4em;
}
.ant-input-affix-wrapper,
.ant-btn {
  background: rgba(255, 255, 255, 0.35);
  backdrop-filter: blur(3px);
  height: 40px;
}
.meta-search-bar ::placeholder {
  color: rgba(255, 255, 255, 0.75);
}
.meta-search-bar .ant-btn {
  background: #eee;
}
.meta-search-bar svg {
  fill: gray;
}
#weather > div {
  display: block;
  z-index: 3;
  position: absolute;
  top: 0;
  left: 0;
  /* background: rgba(255, 255, 255, 0.45); */
  /* backdrop-filter: blur(3px); */
}

